' Generated by UML Generator
' Encoded: pLXBSzis4BxhLt365ogMCctJaoRHn8dxy4oJQIGtbquF40dBc50WJO1Et3JzxTa5I681WfJSNdAHpTt5xc9V-82NIhDQDuTYfZu8MR6Q7PAiO4fTQ5sBNQFvLLRAhVYR9z_DRaNEaqpKMS5dCoELl2uFLS4_RNWcAfvydYN9KZKx-wbMoKLTiuVVXDBFBMcD0aluEVSMff8T-2hPWacvNoIAr_Vm3wmNKizHckLvArcRFwl4VivNoQui2yuaIcMio9g2QNuj3ZoTc-KU_KhkQvuBBhL2jlFECTRUWf_k6b4TW8pYlp9rk-NwkNNJ22gGvEaDotHPMszNVaXGQCzr6n3VA0c9wErVIUIbZh1Ad7EBnD7LYFzkspTbVM3wGbb_qRRz3ms2Jzi-Jr4HT9l4Aox3xnfMgCcaw7Amy4kqUgwvqhQ2EdLX9B6qBEzxq2MG6U7zCC5xDkGDgn4TIKtPsUQeqFNxKkI6n86mxVGfojASrPVbHqbfNabQnOxPLtN8C6Nb4VkGkPJOMD7EmMz8YDH2FwoIl6nsXTbY8mMKqH_mg_eTEpr1yuKA5WbPFcyBurqhXFxrTf21KaZiZ27jBRFTwCf64GrtpXI9G5jOyJOuMc0ZdUaqq7XMZNx39DlpkfrV6jA5gk2FikN8SWvAjXcJajT80lCV8kFj5P1DFvSLb_ZHjGJ-RrMffj1gT0g0BpIPg6RZzPPHqaW90dqGaXU9hXl3WYtfzq89pNEwWpRZRgVflEzm89BIQtiF_LM_WoHbTPiAwGhgFhkDKpTsmo7JMWcfVJ-CCcBcTuqeygtcbIq0Nbdh-fBVCB2z6JOg3cGRmvIKKbyIRvYGfXJEFsCjYEnBSW1Ioceyacns_lnhq9da33mBklBCEz6GK8DUJE6Lr7nlQkeCE7MPDvaMfQHhZuzybEBTIHKxfywqG7zQsvgX8vtKDNmP6PiJEmar_xbWNeNTG3kwUNdYiTrKxqjDatMUmtmCQPWE4mvoPAkUraNAjZ0PdIRb2dvirlsXS1fWY0q9Tsw33WXEgZ4G62LlljJyKDxpSJvi2caKDtIH3axMIIG2eiSm25hoyOvgANtM_VFBp6EQEZyNmt5j_7N5EPZb7ZDMnhw1RLidliSzrIyZjxA7Cnrk6G4j6w-Eqy5XOSx_2J2JmKe6ETXyKqZp53JMLaAScRK1QTiY5jXHdEQ6hpqYuU0kFDHH7mVyJaVgBJ-6xzqEckg-xFstSbSovv_2Gi4PSvgaFQDY_H3RHojEa1E59wSi7NJbb6mmMgAYcF6oWad9ytH2viZrOnAZkxmvWBwBGfiMc1EWqk7naFHiIFgHaeA28O0S46Pr37C3w04fKW41xzAlZu3xYnzIohhegpHWR5qTHJd1D1WAT6Camc5xoX20gmKhu3wEGObW6ti_iKkZ5uZWilLlFS2N9Fh_AVBX-Tx5F4Q_i6Vim4jwI-jWEQ-y0OE7_XgGYUGV2NLjtBLxe4fEUMAOH1JVnkD2S7irnoa6nhTeGlE8KyEeY7Cd7X5EEv7_vnC1tR0hMaMe8rVwSE4Zo_XrcEueSwgnJVQ6vTxTL4uQB4x_E_tmgcnaNZz4cWLKsYOvwQwmpBdAQb455uqblIGioNt2ITZ0uWQE6rea4JEBf3UoI0OcvhtwwDAu_EF0z6MhE4InKH1zwRo8UUHFtL743ODb139uBne487k3mKFQZZCCHl1y50uEUp4UUIq9eEysDWEXtFpNtkNodtLtRFYSShcCCvu-NGUlUaC-UQKPlWy-0SqJ2dePRoIGDxF0WFVwuxmscCRZFPdWaTsEhF7fw8D91uaMyOc4WahXTwkDm75YEm1gWSUZt1c9t7BPs_0EO9ffZu7cZPCUrRXE4p0OucZ8by0H5WJ2qFemlEGoRmx5Lm
' URL: http://www.plantuml.com/plantuml/png/pLXHRzms37w_No4WBxxjNEpvq1sQBHiMO1sskwulmnuKcxa8jML7ejDsMV_xn9DZcevSNny6zCKNV_meKYH5obczygWTTdMryk-CRRNJjIegxVqbeZCt7S9rqTY3-GVKTwixKu8gZ2igMArEBFLZKxSLVDX3OLfGZokbSj_Tn5U_LPVEwO-_6eyl8xGZGXuUtmh5pEeQjkeGJDhZHdbm3-6Fe6yihecjox9dEle9tFYwtggRfgb0Ms8LkYgwIYEyCJLawvEwmA_jqK5fmA8dCNl7WfrG-Ec-CsqTOAB_eltT0V1bTFD4z849sQqki77HswqC2P6EWF5561KXCOFzQqkoZ86jOkSsYd4_upzl-xPnjSPB7_qbs_4lCXXyEWnvIbB8RLvsXWFtdQxyPvE2pJF5Jq_Lm-l7qXcN0Rs7rIqQ_BXLPTFTL41OPqs8oP_XwOTYudKcbJHTOAD6wkj-bt_q9F8mqde1iGYCnYBsMrXVni2FLhXdKu7pq9YIepIJqyLepPGPhp2EPzlXQstr4Ln_654ZnOD-F04ET0ak88Ms5Xn1mVoxn5dz8S0xaZSjM7hPAXR4fNnNePyhQVA5Dn6NsOj28THrrWR240JrlKBNdKILzlZMU8DGyWw6ZFDEiwT4di2C0v-xmL__Us2oY3SrnJreLzobqNtSC0l7LgReqB9c1IdpDvsfoWD2Io3zHkju1RUwgxYFz1fzTuanpBYKk2HUQsFL8n4VgHPCyKdL0SgqE_gdxFprTxyUguqQ-iNaL5w8zao0qnZUgIGHGZu82XBNb5s1fh5ZtUN-HInuQhkffdk1feR1DkgZPzQRy7RYn9p4LepmSwL5XTtgoiDGIsVEeAvzso2CGrysxorZd8vJE4RpnmzOZ5HSatLq6LFkmoDcdJDv_lHBDOd8wzS8mScG0a5H4lt5GTqymAoSDaLOjfv6EihE7Aj4NHgeP4aERzyZCUioS3xsOv4w5YVRTVINYrCA_KIOAcDfuD3NYV2OKL56hCcp-Ma8pqpWlQZZxDcmC2Jup6GkWgPsKEw_fclJyjM2Ao4jBFg0zCSY4TZvImSttpWYqM0bRXrk-VRAQsH2VUcooZleseS6GV2kRGaVk52unvp7Z3CgSHwI--Zfd0PnFJb7LPxA1QviBMagPRnfzngXp9ASvRlqqeKpdXVnjOBGYbHJ-zs56M7X_GZTPUiX-Rp8yjH8zFQly9j5nAKFCxawiKZGbvnVugUbyySqrHl_XoyFSYqMm5atahm4NpZJJgup-VWgalEjXHbznL05B1lQg8IPZHgCRDGp4-jX-PHgWl_b8_kgNrZEofbHVSLUI8_ax5oOwxeiPneJmqoVtYlaF6U930PxCtSeAAnSHmi3zf0utrHkyXyaUVxlhg_LYQJ9yxJWnOlT-5jFVEAn4eqYAVj6oERqPdGaJZx4QB2pOvyYoYmsExR4FKO6GWX88Iv2ZwaXmjZCAx1bLrV_0G00
' Generated on: 2025-12-16T15:09:21.999140600

@startuml
skinparam classAttributeIconSize 0
hide circle

class ComplexRecipe {
  -subRecipes: ArrayList<Recipe>
  --
  +ComplexRecipe(name: String, servings: int)
  +addRecipe(recipe: Recipe): boolean
  +calculateTime(): int
  +calculateIngredients(): ArrayList<Ingredient>
  +calculateEquipment(): HashSet<String>
  +scale(factor: int): ComplexRecipe
  +getRecipes(): ArrayList<Recipe>
  -ingredientInList(ingredient: Ingredient, ingredients: ArrayList<Ingredient>): int
  +formatAsString(): String
  -getSubRecipesAsString(): String
  +getIngredientsAsString(): String
  +equals(recipe: Recipe): boolean
  +toString(): String
}

class Ingredient {
  -name: String
  -quantity: double
  -unit: Units
  --
  +Ingredient(name: String, quantity: double, unit: Units)
  +getQuantity(): double
  +getUnit(): Units
  +getName(): String
  +setQuantity(qty: double): void
  +equals(ingredient: Ingredient): boolean
  +toString(): String
  +scale(factor: int): Ingredient
}

class InputManager {
  -state: States
  -reader: Scanner
  -books: ArrayList<RecipeBook>
  -openBook: RecipeBook
  -results: ArrayList<Recipe>
  -input: String
  -openRecipe: Recipe
  -running: boolean = true
  -lastVisited: States
  --
  +InputManager()
  +getInput(): void
  -recipeBooksPage(): void
  -openBookPage(): void
  -searchPage(): void
  -searchResultsPage(): void
  -recipePage(): void
  -addRecipePage(): void
  -addRecipeBookPage(): void
  -buildStep(): Step
  -setDefaultRecipes(): void
  +getRunning(): boolean
}

class Main {
  +{static} main(args: String[]): void
}

class Recipe {
  #name: String
  #servings: int
  #rating: Integer
  #introduction: String
  #ingredients: ArrayList<Ingredient>
  #equipment: HashSet<String>
  #time: int
  #tags: HashSet<Tags>
  #recipeCompleteFlag: boolean = false
  --
  +Recipe(name: String, servings: int)
  +upVote(): void
  +downVote(): void
  +getRating(): int
  +setRating(rating: int): void
  +addStep(step: Step): boolean
  +addRecipe(recipe: Recipe): boolean
  +scale(factor: int): Recipe
  +addTag(tag: Tags): String
  +removeTag(tag: Tags): String
  +getTags(): HashSet<Tags>
  +getIngredients(): ArrayList<Ingredient>
  +getEquipment(): HashSet<String>
  +getTime(): int
  +setTime(time: int): void
  +setName(name: String): void
  +getName(): String
  +getIntroduction(): String
  +setIntroduction(introduction: String): void
  +getServings(): int
  +setServings(servings: int): void
  +formatAsSubRecipeString(): String
  +getRecipeComplete(): boolean
  +toSimpleString(): String
  +equals(comparedRecipe: Recipe): boolean
  +calculateTime(): int
  +calculateIngredients(): ArrayList<Ingredient>
  +calculateEquipment(): HashSet<String>
  +getIngredientsAsString(): String
  +getTimeAsString(): String
  +completeRecipe(): void
  +formatAsString(): String
}

class RecipeBook {
  -title: String
  -recipes: ArrayList<Recipe>
  --
  +RecipeBook(title: String)
  +addRecipe(recipe: Recipe): String
  +upvoteRecipe(recipeIndex: int): void
  +downvoteRecipe(recipeIndex: int): void
  +searchName(name: String): ArrayList<Recipe>
  +searchIngredient(ingredient: String): ArrayList<Recipe>
  +searchTime(time: int): ArrayList<Recipe>
  +searchTag(tag: Tags): ArrayList<Recipe>
  +getTopRated(): ArrayList<Recipe>
  +getRecipes(): ArrayList<Recipe>
  +toString(): String
}

class SimpleRecipe {
  -steps: ArrayList<Step> = new ArrayList<>()
  --
  +SimpleRecipe(name: String, servings: int)
  +addStep(step: Step): boolean
  +calculateTime(): int
  +calculateIngredients(): ArrayList<Ingredient>
  +calculateEquipment(): HashSet<String>
  +scale(factor: int): SimpleRecipe
  +getSteps(): ArrayList<Step>
  +getIngredientsAsString(): String
  +getStepsAsString(): String
  +formatAsString(): String
  +formatAsSubRecipeString(): String
  +equals(recipe: Recipe): boolean
  +toString(): String
}

class Step {
  -ingredients: ArrayList<Ingredient>
  -description: String
  -time: int
  -equipment: String
  --
  +Step(ingredients: ArrayList<Ingredient>, description: String, time: int, equipment: String)
  +Step(description: String, equipment: String)
  +getIngredients(): ArrayList<Ingredient>
  +getDescripton(): String
  +getTime(): int
  +setDescription(description: String): void
  +setTime(time: int): void
  +addIngredient(ingredient: Ingredient): void
  +getEquipment(): String
  +setEquipment(equipment: String): void
  +scale(factor: int): Step
  +toString(): String
  +equals(comparedStep: Step): boolean
}

ComplexRecipe --|> Recipe
ComplexRecipe o-- Recipe
ComplexRecipe ..> Ingredient
InputManager o-- RecipeBook
InputManager *-- RecipeBook
InputManager o-- Recipe
InputManager *-- Recipe
InputManager ..> Step
Recipe o-- Ingredient
Recipe ..> Step
RecipeBook o-- Recipe
SimpleRecipe --|> Recipe
SimpleRecipe o-- Step
Step o-- Ingredient
Step ..> Step
@enduml